# pomodomo

./: Cargo.toml  README.md
src/: alert.rs  controller.rs  interface.rs  main.rs  pomodoro.rs
ui/: app-window.slint
