[package]
name = "pomodomo"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
slint = "1.8.0"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "sync", "time"] }

[build-dependencies]
slint-build = "1.8.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
